# takeit

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
src/: api.rs  config.rs  main.rs
src/.github/workflows/: main.yml
src/collection/: collection.rs  document.rs  handlers.rs  mod.rs  models.rs
